fix: made normless POP examples comply with ActionNames, removed equals from constant